--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <aside>
       <div class="head-title">
         <h1>Jason Watkins</h1>
-        <p class="sub-title">full stack software developer</p>
-      
+        <p class="sub-title"><strong>full stack software developer</strong></p>
         <div class="head-info">
           <span>email: <span class="info">watkinsjasonc@gmail.com</span></span>
           <span>phone: <span class="info">+1 (310) 382-7562</span></span>
@@ -28,22 +27,53 @@
           <li>HTML / CSS</li>
           <li>AWS / Azure / Heroku</li>
           <li>SQL / PostgreSQL</li>
+          <li>Ruby on Rails</li>
+          <li>Javascript</li>
+          <li>HTML / CSS</li>
+          <li>AWS / Azure / Heroku</li>
+          <li>SQL / PostgreSQL</li>
+          <li>Ruby on Rails</li>
+          <li>Javascript</li>
+          <li>HTML / CSS</li>
+          <li>AWS / Azure / Heroku</li>
+          <li>SQL / PostgreSQL</li>
         </ul>
       </div>  
     </aside>
     <div class="main">
       <div class="projects">
         <h2>projects</h2>
-        <h4>facelord</h4>
+        <p class="sub-title"><strong>facelord</strong></p>
         <ul>
+          <li>facelord blah blah blah</li>
+          <li>facelord blah blah blah</li>
+          <li>facelord blah blah blah</li>
+          <li>facelord blah blah blah</li>
+          <li>facelord blah blah blah</li>
+          <li>facelord blah blah blah</li>
+        </ul>
+        <p class="sub-title"><strong>dmitter</strong></p>
+        <ul>
+          <li>facelord blah blah blah</li>
+          <li>facelord blah blah blah</li>
+          <li>facelord blah blah blah</li>
+          <li>facelord blah blah blah</li>
+          <li>facelord blah blah blah</li>
           <li>facelord blah blah blah</li>
         </ul>
       </div>
       <div class="work">
         <h2>work</h2>
-        <h4>Julien's Auctions</h4>
+        <p class="sub-title"><strong>Julien's Auctions</strong></p>
         <span>dates</span>
         <ul>
+          <li>blah blah blah</li>
+          <li>blah blah blah</li>
+        </ul>
+        <p class="sub-title"><strong>Bonhams</strong></p>
+        <span>dates</span>
+        <ul>
+          <li>blah blah blah</li>
           <li>blah blah blah</li>
         </ul>
       </div>
