--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>Jason Watkins</h1>
         <p class="sub-title"><strong>full stack software developer</strong></p>
         <div class="head-info">
-          <span>email: <span class="info">watkinsjasonc@gmail.com</span></span>
-          <span>phone: <span class="info">+1 (310) 382-7562</span></span>
-          <span>location: <span class="info">Los Angeles, CA US</span></span>
+          <div class='info-box'><div id='email' class='icon'></div><span class="info">watkinsjasonc@gmail.com</span></div>
+          <div class='info-box'><div id='phone' class='icon'></div><span class="info">+1 (310) 382-7562</span></div>
+          <div class='info-box'><div id='location' class='icon'></div><span class="info">Los Angeles, CA US</span></div>
         </div>
       </div>
       <div class="skills">
