--- a/index.html
+++ b/index.html
@@ -17,27 +17,24 @@
           <div class='info-box'><div id='email' class='icon'></div><span class="info">watkinsjasonc@gmail.com</span></div>
           <div class='info-box'><div id='phone' class='icon'></div><span class="info">+1 (310) 382-7562</span></div>
           <div class='info-box'><div id='location' class='icon'></div><span class="info">Los Angeles, CA US</span></div>
+          <div class='info-box'><div id='portfolio' class='icon'></div><span class="info">https://jwatkins1138.github.io/portfolio/</span></div>
         </div>
       </div>
       <div class="skills">
         <h2>skills</h2>
         <ul>
           <li>Ruby on Rails</li>
-          <li>Javascript</li>
+          <li>Javascript / React.js</li>
+          <li>Python</li>
           <li>HTML / CSS</li>
           <li>AWS / Azure / Heroku</li>
           <li>SQL / PostgreSQL</li>
-          <li>Ruby on Rails</li>
-          <li>Javascript</li>
-          <li>HTML / CSS</li>
-          <li>AWS / Azure / Heroku</li>
-          <li>SQL / PostgreSQL</li>
-          <li>Ruby on Rails</li>
-          <li>Javascript</li>
-          <li>HTML / CSS</li>
-          <li>AWS / Azure / Heroku</li>
-          <li>SQL / PostgreSQL</li>
+          <li>Docker / Ansible</li>
+          <li>Git</li>
         </ul>
+        <h2>education</h2>
+        <p><strong>UCLA Extention</strong></p>
+        <ul><li>Cyber Security Certificate</li></ul>
       </div>  
     </aside>
     <div class="main">
@@ -64,14 +61,14 @@
       </div>
       <div class="work">
         <h2>work</h2>
-        <p class="sub-title"><strong>Julien's Auctions</strong></p>
-        <span>dates</span>
+        <p class="sub-title"><strong>Julien's Auctions - Property Specialist</strong></p>
+        <span><i>Los Angeles, CA | 05/2014 - current</i></span>
         <ul>
           <li>blah blah blah</li>
           <li>blah blah blah</li>
         </ul>
-        <p class="sub-title"><strong>Bonhams</strong></p>
-        <span>dates</span>
+        <p class="sub-title"><strong>Bonhams - Cataloger</strong></p>
+        <span><i>Los Angeles, CA | 10/2009 - 11/2013</i></span>
         <ul>
           <li>blah blah blah</li>
           <li>blah blah blah</li>
