--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class='info-box'><div id='email' class='icon'></div><span class="info">watkinsjasonc@gmail.com</span></div>
           <div class='info-box'><div id='phone' class='icon'></div><span class="info">+1 (310) 382-7562</span></div>
           <div class='info-box'><div id='location' class='icon'></div><span class="info">Los Angeles, CA US</span></div>
-          <div class='info-box'><div id='portfolio' class='icon'></div><span class="info">https://jwatkins1138.github.io/portfolio/</span></div>
+          <div class='info-box'><div id='portfolio' class='icon'></div><span class="info">jwatkins1138.github.io/portfolio</span></div>
         </div>
       </div>
       <div class="skills">
