--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
     <div class="main">
       <div class="projects">
         <h2>projects</h2>
-        <p class="sub-title"><strong>facelord</strong></p>
+        <p class="sub-title"><strong>facelord</strong><i> a social media web application built with Ruby on Rails and deployed to Heroku</i></p>
         <ul>
-          <li>facelord blah blah blah</li>
-          <li>facelord blah blah blah</li>
-          <li>facelord blah blah blah</li>
-          <li>facelord blah blah blah</li>
-          <li>facelord blah blah blah</li>
-          <li>facelord blah blah blah</li>
+          <li>Set up user and session authentications using Devise and OmniAuth.</li>
+          <li>Deployed automatic custom mailers via SendGrid.</li>
+          <li>Scrutured multi-table database with bi-direction user friendship relations, post/comment/like model ect.</li>
+          <li>Styled using Bulma.</li>
+          <!-- <li>facelord blah blah blah</li> -->
+          <!-- <li>facelord blah blah blah</li> -->
         </ul>
-        <p class="sub-title"><strong>dmitter</strong></p>
+        <p class="sub-title"><strong>flickr feed</strong><i> a Rails app deployed to Heroku that allows users to search and display photos via the FLickr API</i></p>
         <ul>
-          <li>facelord blah blah blah</li>
+          <li>Set up</li>
           <li>facelord blah blah blah</li>
           <li>facelord blah blah blah</li>
           <li>facelord blah blah blah</li>
