done pdf version

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="skills">
         <h2>skills</h2>
         <ul>
-          <li>Ruby on Rails</li>
-          <li>Javascript / React.js</li>
+          <li>Ruby on Rails / RSpec</li>
+          <li>Javascript / ReactJS / Webpack</li>
           <li>Python</li>
           <li>HTML / CSS</li>
           <li>AWS / Azure / Heroku</li>
@@ -40,23 +40,17 @@
     <div class="main">
       <div class="projects">
         <h2>projects</h2>
-        <p class="sub-title"><strong>facelord</strong><i> a social media web application built with Ruby on Rails and deployed to Heroku</i></p>
+        <p class="sub-title"><strong>facelord: </strong><i> a social media web application built with Ruby on Rails and deployed to Heroku</i></p>
         <ul>
           <li>Set up user and session authentications using Devise and OmniAuth.</li>
           <li>Deployed automatic custom mailers via SendGrid.</li>
-          <li>Scrutured multi-table database with bi-direction user friendship relations, post/comment/like model ect.</li>
-          <li>Styled using Bulma.</li>
-          <!-- <li>facelord blah blah blah</li> -->
-          <!-- <li>facelord blah blah blah</li> -->
+          <li>Strutured complex multi-table relational database.</li>
+          <li>Integrated responsive, accesible and aesthetic styling using Bulma.</li>
+          
         </ul>
-        <p class="sub-title"><strong>flickr feed</strong><i> a Rails app deployed to Heroku that allows users to search and display photos via the FLickr API</i></p>
+        <p class="sub-title"><strong>flickr feed: </strong><i> a Rails app that allows users to search and display photos via the FLickr API</i></p>
         <ul>
-          <li>Set up</li>
-          <li>facelord blah blah blah</li>
-          <li>facelord blah blah blah</li>
-          <li>facelord blah blah blah</li>
-          <li>facelord blah blah blah</li>
-          <li>facelord blah blah blah</li>
+          <li>Set up a static page controller that searches users and fetches their feed via API and returns paginated chunks.</li>
         </ul>
       </div>
       <div class="work">
@@ -64,14 +58,15 @@
         <p class="sub-title"><strong>Julien's Auctions - Property Specialist</strong></p>
         <span><i>Los Angeles, CA | 05/2014 - current</i></span>
         <ul>
-          <li>blah blah blah</li>
-          <li>blah blah blah</li>
+          <li>Designed, implemented, and maintained vast physical inventories and their relational counterparts.</li>
+          <li>Responsible for receiving, curating, cataloging, storing, and displaying large estates. </li>
+          <li>Handled much of the press and logistics related to above mentioned sales.</li>
         </ul>
         <p class="sub-title"><strong>Bonhams - Cataloger</strong></p>
         <span><i>Los Angeles, CA | 10/2009 - 11/2013</i></span>
         <ul>
-          <li>blah blah blah</li>
-          <li>blah blah blah</li>
+          <li>Responsible for receiving and tracking large inventories of rare valuables.</li>
+          <li>Wrote highly detailed and specialized catalog descriptions for said property.</li>
         </ul>
       </div>
 
