done pdf version

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li>Set up user and session authentications using Devise and OmniAuth.</li>
           <li>Deployed automatic custom mailers via SendGrid.</li>
           <li>Strutured complex multi-table relational database.</li>
-          <li>Integrated responsive, accesible and aesthetic styling using Bulma.</li>
+          <li>Integrated responsive, accesible, and aesthetic styling using Bulma.</li>
           
         </ul>
         <p class="sub-title"><strong>flickr feed: </strong><i> a Rails app that allows users to search and display photos via the FLickr API</i></p>
