--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
       <div class="work">
         <h2>work</h2>
         <p class="sub-title"><strong>Julien's Auctions - Property Specialist</strong></p>
-        <span><i>Los Angeles, CA | 05/2014 - current</i></span>
+        <span><i>Los Angeles, CA | may 2014 - current</i></span>
         <ul>
           <li>Designed, implemented, and maintained vast physical inventories and their relational counterparts.</li>
           <li>Responsible for receiving, curating, cataloging, storing, and displaying large estates. </li>
           <li>Handled much of the press and logistics related to above mentioned sales.</li>
         </ul>
         <p class="sub-title"><strong>Bonhams - Cataloger</strong></p>
-        <span><i>Los Angeles, CA | 10/2009 - 11/2013</i></span>
+        <span><i>Los Angeles, CA | oct 2009 - nov 2013</i></span>
         <ul>
           <li>Responsible for receiving and tracking large inventories of rare valuables.</li>
           <li>Wrote highly detailed and specialized catalog descriptions for said property.</li>
