--- a/index_2.html
+++ b/index_2.html
@@ -85,11 +85,21 @@
         </div>  
       </div>
     </div>
-    <div class="education">
-      <h2>education</h2>
-      <p><strong>UCLA Extention</strong></p>
-      <ul><li>Cyber Security Certificate</li></ul>
-    </div>
+    <footer>
+      <div class="education">
+        <h2>education</h2>
+        <p><strong>UCLA Extention</strong></p>
+        <ul><li>Cyber Security Certificate</li></ul>
+      </div>
+      <div class="interests">
+        <h2>interests/hobbies</h2>
+        <ul>
+          <li>Classical Pianist / Electronic and Rock Musician</li>
+          <li>Reading: History / Philosophy / Science Fiction</li>
+          <li>Photography / Videography / Editing</li>
+        </ul>
+      </div>
+    </footer>
   </main>
 </body>
 
