--- a/index_2.html
+++ b/index_2.html
@@ -92,11 +92,12 @@
         <ul><li>Cyber Security Certificate</li></ul>
       </div>
       <div class="interests">
-        <h2>interests/hobbies</h2>
+        <h2>other skills / hobbies</h2>
         <ul>
-          <li>Classical Pianist / Electronic and Rock Musician</li>
-          <li>Reading: History / Philosophy / Science Fiction</li>
-          <li>Photography / Videography / Editing</li>
+          <li>Musical Composition, Performance, and Production</li>
+          <li>Photography, Videography, and Editing</li>
+          <li>Screenwriting, Story Development</li>
+          <li>Graphic Design</li>
         </ul>
       </div>
     </footer>
