--- a/index_2.html
+++ b/index_2.html
@@ -36,7 +36,7 @@
         </ul>
         <ul>
           <li>Docker / Ansible</li>
-          <li>Git</li>
+          <li>Git / Github</li>
           <li>Linux / MacOS / Windows</li>
         </ul>
       </div>
@@ -54,10 +54,11 @@
           </ul>
         </div>
         <div class="project">  
-          <p class="sub-title"><strong>flickr feed: </strong><i> a Rails app that allows users to search and display photos via the FLickr API</i></p>
+          <p class="sub-title"><strong>shop type shop: </strong><i> a React webshop</i></p>
           <ul>
-            <li>Integrated responsive, accesible, and aesthetic styling using Bulma.</li>
-            <li>Set up a static page controller that searches users and fetches their feed via API and returns paginated chunks.</li>
+            <li>Used react to create a dynamic, searchable inventory pages and carts.</li>
+            <li>Created custom reausable functional components and unique styling.</li>
+            <li>Designed to display any inventory data from either external API or static internal expositional items.</li>
           </ul>
         </div>  
     </div>
@@ -78,7 +79,6 @@
           <p class="sub-title"><strong>Bonhams - Cataloger</strong></p>
           <span><i>Los Angeles, CA | oct 2009 - nov 2013</i></span>
           <ul>
-            <li>Handled much of the press and logistics related to above mentioned sales.</li>
             <li>Responsible for receiving and tracking large inventories of rare valuables.</li>
             <li>Wrote highly detailed and specialized catalog descriptions for said property.</li>
           </ul>
