--- a/index_2.html
+++ b/index_2.html
@@ -45,22 +45,20 @@
       <h2>personal projects</h2>
       <div class="project-box">
         <div class="project">
-          <p class="sub-title"><strong>facelord: </strong><i> a social media web application built with Ruby on Rails and deployed to Heroku</i></p>
+          <p class="sub-title"><strong>www.allcharts.site: </strong><i> a React SPA that pulls, displays and graphs financial data with its own Rails backend for user functions</i></p>
+          <div class="list-box">
           <ul>
-            <li>Set up user and session authentications using Devise and OmniAuth.</li>
-            <li>Deployed automatic custom mailers via SendGrid.</li>
-            <li>Strutured complex multi-table relational database.</li>
-            
+            <li>Used ReactJS to build a fast single and sleek frontend that pulls financial data from the Alphavantage API</li>
+            <li>Used ChartJS / react-chartjs-2 to dynamically create visual graphs of the financial data and time frames selected by the user.</li>
+            <li>Used Ruby on Rails to build a dedicated backend API to handle user functions.</li>
           </ul>
+          <ul>
+            <li>Used Devise / Devise-JWT to set up token based user and session authentication. </li>
+            <li>Used the Rails PostgreSQL database to set up user functions such as commenting on particular stocks and currating watchlists.</li>
+            <li>Used Heroku to deploy the API and client.</li>
+          </ul>
+          </div>
         </div>
-        <div class="project">  
-          <p class="sub-title"><strong>shop type shop: </strong><i> a React webshop</i></p>
-          <ul>
-            <li>Used react to create a dynamic, searchable inventory pages and carts.</li>
-            <li>Created custom reausable functional components and unique styling.</li>
-            <li>Designed to display any inventory data from either external API or static internal expositional items.</li>
-          </ul>
-        </div>  
     </div>
     </div>
     <div class="work">
