--- a/index_2.html
+++ b/index_2.html
@@ -48,7 +48,7 @@
           <p class="sub-title"><strong>www.allcharts.site: </strong><i> a React SPA that pulls, displays and graphs financial data with its own Rails backend for user functions</i></p>
           <div class="list-box">
           <ul>
-            <li>Used ReactJS to build a fast single and sleek frontend that pulls financial data from the Alphavantage API</li>
+            <li>Used ReactJS to build a fast and sleek frontend that pulls financial data from the Alphavantage API</li>
             <li>Used ChartJS / react-chartjs-2 to dynamically create visual graphs of the financial data and time frames selected by the user.</li>
             <li>Used Ruby on Rails to build a dedicated backend API to handle user functions.</li>
           </ul>
