margin and copy

--- a/index_2.html
+++ b/index_2.html
@@ -94,8 +94,8 @@
         <ul>
           <li>Musical Composition, Performance, and Production</li>
           <li>Photography, Videography, and Editing</li>
-          <li>Screenwriting, Story Development</li>
-          <li>Graphic Design</li>
+          <li>Screenwriting and Story Development</li>
+          <li>Graphic Design and Visual Arts</li>
         </ul>
       </div>
     </footer>
