--- a/index_2.html
+++ b/index_2.html
@@ -26,8 +26,8 @@
       <div class="skill-box">
         <ul>
           <li>Ruby on Rails / RSpec</li>
-          <li>Javascript / ReactJS / Webpack</li>
-          <li>Python</li>
+          <li>Javascript / ReactJS / Webpack / Jest</li>
+          <li>Python / Bash</li>
         </ul>  
         <ul>  
           <li>HTML / CSS</li>
@@ -53,8 +53,8 @@
             <li>Used Ruby on Rails to build a dedicated backend API to handle user functions.</li>
           </ul>
           <ul>
-            <li>Used Devise / Devise-JWT to set up token based user and session authentication. </li>
-            <li>Used the Rails PostgreSQL database to set up user functions such as commenting on particular stocks and currating watchlists.</li>
+            <li>Used Devise / Devise-JWT to set up token-based user and session authentication. </li>
+            <li>Used the Rails PostgreSQL database to set up user functions such as commenting on particular stocks and curating watchlists.</li>
             <li>Used Heroku to deploy the API and client.</li>
           </ul>
           </div>
@@ -68,9 +68,9 @@
           <p class="sub-title"><strong>Julien's Auctions - Property Specialist</strong></p>
           <span><i>Los Angeles, CA | may 2014 - current</i></span>
           <ul>
-            <li>Designed, implemented, and maintained vast physical inventories and their relational counterparts.</li>
+            <li>Designed, implemented, and maintained vast physical inventories and related data inventories.</li>
             <li>Responsible for receiving, curating, cataloging, storing, and displaying large estates. </li>
-            <li>Handled much of the press and logistics related to above mentioned sales.</li>
+            <li>Managed press, promotion, exhibition, and logistics for auctions.</li>
           </ul>
         </div>
         <div class="job">  
@@ -78,7 +78,7 @@
           <span><i>Los Angeles, CA | oct 2009 - nov 2013</i></span>
           <ul>
             <li>Responsible for receiving and tracking large inventories of rare valuables.</li>
-            <li>Wrote highly detailed and specialized catalog descriptions for said property.</li>
+            <li>Generated specialized, detailed content describing items to be sold at auction.</li>
           </ul>
         </div>  
       </div>
