rearrange add copy to sylte 2

--- a/index_3.html
+++ b/index_3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='stylesheet' href='style_2.css'>
+  <link rel='stylesheet' href='style_3.css'>
   <title>Jason Watkins Resume</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
       </div>
     </header>
     <div class="skills">
-      <h3>skills</h3>
+      <h4>skills</h4>
       <div class="skill-box">
         <ul>
           <li>Ruby on Rails / RSpec</li>
@@ -42,65 +42,55 @@
       </div>
     </div>  
     <div class="projects">
-      <h3>personal projects</h3>
+      <h4>personal projects</h4>
       <div class="project-box">
         <div class="project">
           <p class="sub-title"><strong>www.allcharts.site: </strong><i> a React SPA that pulls, displays and graphs financial data with its own Rails backend for user functions</i></p>
           <div class="list-box">
           <ul>
-            <li>Built a fast and sleek React frontend that pulls financial data from the Alphavantage API</li>
-            <li>Integrated dynamically created visual graphs of the financial data and time frames selected by the user using ChartJS (react-chartjs-2).</li>
+            <li>Used ReactJS to build a fast and sleek frontend that pulls financial data from the Alphavantage API</li>
+            <li>Used ChartJS / react-chartjs-2 to dynamically create visual graphs of the financial data and time frames selected by the user.</li>
             <li>Used Ruby on Rails to build a dedicated backend API to handle user functions.</li>
-            <li>Set up token-based user and session authentication using Devise and Devise-JWT. </li>
           </ul>
           <ul>
-            <li>Configured the Rails API and PostgreSQL database to handle user functions such as commenting on particular stocks and curating watchlists.</li>
-            <li>Wrote a custom seeding script to import mass lists of stock symbols and descriptions to reduce external API calls and provide an endpoint for auto-suggestion search drop-down modal.</li>
-            <li>Deployed the API and Client to cloud via Heroku.</li>
+            <li>Used Devise / Devise-JWT to set up token-based user and session authentication. </li>
+            <li>Used the Rails PostgreSQL database to set up user functions such as commenting on particular stocks and curating watchlists.</li>
+            <li>Used Heroku to deploy the API and client.</li>
           </ul>
           </div>
         </div>
     </div>
     </div>
     <div class="work">
-      <h3>work history</h3>
+      <h4>work history</h4>
       <div class="work-box">
         <div class="job">
-          <p class="sub-title"><strong>Julien's Auctions - Property Specialist</strong> - <span><i>Los Angeles, CA | may 2014 - current</i></span></p>
-          <div class="work-lists">
+          <p class="sub-title"><strong>Julien's Auctions - Property Specialist</strong></p>
+          <span><i>Los Angeles, CA | may 2014 - current</i></span>
           <ul>
-            <li>Responsible for appraising, receiving, curating, cataloging, storing, and displaying large estates.</li>
             <li>Designed, implemented, and maintained vast physical inventories and related data inventories.</li>
-          </ul>
-          <ul>
+            <li>Responsible for receiving, curating, cataloging, storing, and displaying large estates. </li>
             <li>Managed press, promotion, exhibition, and logistics for auctions.</li>
-            <li>Coordinated with internal departments and external contractors to reduce costs, maximize sales exposure, and increase client satisfaction.</li>
           </ul>
-          </div>
         </div>
-      </div>
-      <div class="work-box">  
         <div class="job">  
-          <p class="sub-title"><strong>Bonhams - Cataloger</strong> - <span><i>Los Angeles, CA | oct 2009 - nov 2013</i></span></p>
-          <div class="work-lists">
+          <p class="sub-title"><strong>Bonhams - Cataloger</strong></p>
+          <span><i>Los Angeles, CA | oct 2009 - nov 2013</i></span>
           <ul>
             <li>Responsible for receiving and tracking large inventories of rare valuables.</li>
-          </ul>
-          <ul>
             <li>Generated specialized, detailed content describing items to be sold at auction.</li>
           </ul>
-        </div>
         </div>  
       </div>
     </div>
     <footer>
       <div class="education">
-        <h3>education</h3>
-        <p><strong>UCLA Extention</strong><span><i> - October 2020</i></span></p>
+        <h4>education</h4>
+        <p><strong>UCLA Extention</strong></p>
         <ul><li>Cyber Security Certificate</li></ul>
       </div>
       <div class="interests">
-        <h3>other skills / hobbies</h3>
+        <h4>other skills / hobbies</h4>
         <ul>
           <li>Musical Composition, Performance, and Production</li>
           <li>Photography, Videography, and Editing</li>
